syntax = "proto3";
package TEngine.Network.Message;


///角色详细数据
message CharacterData
{
	int32 Level			= 1;//等级
	int32 SkillPoints	= 2;//技能点
}

///单位属性
message UnitAttr
{
	int32 Hp                         = 1;//生命
	int32 Mp                         = 2;//法力值
	int32 Attack                     = 3;//攻击
	int32 Defense                    = 4;//防御
	int32 Shield                     = 5;//护甲
	int32 PhysicalHit                = 6;//物理攻击命中
	int32 MagicPenetration           = 7;//魔法穿透
	int32 Evade                      = 8;//闪避
	int32 Speed                      = 9;//出手速度
	int32 CriticalHit             	 = 10;//暴击
}
